--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -11,5 +11,5 @@
     <item
         android:id="@+id/nav_filtrar"
         android:title="Filtrar"
-        android:icon="@android:drawable/ic_menu_manage" />
+        android:icon="@android:drawable/ic_menu_sort_by_size" />
 </menu>
